--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --color-bg: #48284a;
+    --color-1: #fff7ae;
+    --color-2: #ffe1c6;
+    --color-3: #ffc6d9;
+    --color-4: #916c80;
+    --color-light: rgba(255, 255, 255,0.6);
+
+    --transition: all 400ms ease;
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #48284a;
+    color: var(--color-1);
+    line-height: 1.7;
+}
+
+/* --------------------- GENERAL STYLES ---------------------------- */
+
+.container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+section {
+    margin-top: 2rem;
+}
+
+section>h2,
+section>h5 {
+    text-align: center;
+    color: var(--color-light);
+}
+
+section>h2 {
+    color: var(--color-primary);
+    margin-bottom: 3rem;
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+.btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-1);
+    padding: 0.75rem 1.5rem;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    background: transparent;
+    border: 1px solid var(--color-1);
+    transition: var(--transition);
+}
+
+.btn:hover {
+    color: var(--color-bg);
+    background: var(--color-1);
+    border-color: transparent;
+}
+
+.btn-primary {
+    background: var(--color-1);
+    color: var(--color-bg);
+}
+
+/* ------------------------ MEDIA QUERIES (MEDIUM DEVICES) ------------------------- */
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: var(--container-width-md);
+    }
+
+    section {
+        margin-top: 6rem;
+    }
+}
+
+/* ------------------------ MEDIA QUERIES (SMALL DEVICES) ------------------------- */
+
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    section>h2 {
+        margin-bottom: 2rem;
+    }
 }
